--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=7.0",
         "tencent/tls-sig-api-v2": "1.0",
-        "guzzlehttp/guzzle": "^6.4"
+        "guzzlehttp/guzzle": "^6.4|^7.0"
     },
     "autoload": {
         "psr-4": {
